# berkeley_ros2_ws

./: .gitignore  README.md
hardware_capture/: authoritative_hardware_contract.csv  authoritative_hardware_contract.yaml  capture_audit.csv  capture_audit.txt  generation_manifest.json  hardware_contract.generated.py  physical_limit_capture.yaml  servo_map.measured_limits.generated.yaml
src/: CALIBRATION_WORKFLOW_V2_2.md  berkeley_lpolicy_temp.py
src/berkeley_biped_pkg/: CMakeLists.txt  FRESHNESS_GATE_v1_2.md  SAFETY_UPDATE_v1_1.md  package.xml  setup.py
src/berkeley_biped_pkg/launch/: berkeley_biped_launch copy.py  berkeley_biped_launch.py  biped_teleop_mux.launch.py
src/berkeley_biped_pkg/src/: berkeley_biped_node.cpp
src/berkeley_biped_pkg/src/configs/: joint_limits.yaml  joint_map.yaml  policy_runtime.yaml
src/bhl_st3215_driver/: CMakeLists.txt  INTEGRATION.md  MIGRATION_NOTES.md  README.md  TRACK2_IDENTIFICATION_GUIDE.md  TRACK2_V2_4_1_NOTES.md  TRACK2_V2_4_3_NOTES.md  TRACK2_V2_4_NOTES.md  package.xml
src/bhl_st3215_driver/config/: servo_driver.yaml  standing_pose_library.yaml  track1_action_contract_v3.yaml
src/bhl_st3215_driver/include/bhl_st3215_driver/: diagnostics.hpp  joint_map.hpp  protocol.hpp  serial_port.hpp  servo_bus.hpp  state_buffer.hpp
src/bhl_st3215_driver/launch/: bhl_st3215_driver.launch.py
src/bhl_st3215_driver/scripts/: apply_servo_calibration.py  calibration_common.py  capture_default_pose_calibration.py  print_default_pose_reference.py  servo_identification_runner.py  standing_load_characterization_runner.py  verify_default_pose_calibration.py
src/bhl_st3215_driver/src/: joint_map.cpp  protocol.cpp  serial_port.cpp  servo_bus.cpp  servo_driver_node.cpp
src/bhl_st3215_driver/test/: test_protocol.cpp
src/docs/: COMMAND_CHEATSHEET.md  INTERFACES_AND_PARAMETERS.md  KNOWN_LEGACY_AND_CAVEATS.md  PACKAGE_REFERENCE.md  WORKFLOWS.md  package_inventory.csv  parameter_reference.csv  topic_service_matrix.csv
src/joystick_bridge/joystick_bridge/: cmd_vel_to_file.py
src/lilgreen_description/: package.xml  setup.cfg  setup.py
src/lilgreen_description/launch/: display.launch.py  gazebo.launch.py
src/lilgreen_description/urdf/: lilgreen.gazebo  (+3 more)
src/pd_controller_pkg/: README.md  package.xml  setup.py
src/servo_test_pkg/: package.xml  setup.cfg  setup.py
(+7 files in other folders)
