<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>berkeley_biped_pkg</name>
  <version>0.2.0</version>
  <description>Motor controller and inference package for Berkeley Biped</description>

  <maintainer email="scott.milich@me.com">scott</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rclpy</exec_depend>

  <!-- YAML Parsing C++ -->
  <exec_depend>yaml-cpp</exec_depend>

  <!-- Python dependencies -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <!-- Users should install either onnxruntime or onnxruntime-gpu manually -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

